Stabilize ApkSpy compile pipeline and apktool post-process